--- a/QuanLyPhongTro/QuanLyPhongTro.csproj
+++ b/QuanLyPhongTro/QuanLyPhongTro.csproj
@@ -82,12 +82,6 @@
     <Compile Include="QuanLyHoaDon.Designer.cs">
       <DependentUpon>QuanLyHoaDon.cs</DependentUpon>
     </Compile>
-    <Compile Include="QuanLyHopDong.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="QuanLyHopDong.Designer.cs">
-      <DependentUpon>QuanLyHopDong.cs</DependentUpon>
-    </Compile>
     <Compile Include="QuanLyHopDongThue.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,9 +128,6 @@
     <EmbeddedResource Include="QuanLyHoaDon.resx">
       <DependentUpon>QuanLyHoaDon.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="QuanLyHopDong.resx">
-      <DependentUpon>QuanLyHopDong.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="QuanLyHopDongThue.resx">
       <DependentUpon>QuanLyHopDongThue.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,7 +157,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\HoaDon.xml" />
-    <Content Include="bin\Debug\HopDongThue.xml" />
+    <Content Include="bin\Debug\HopDongThue.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="bin\Debug\NguoiThueTro.xml" />
     <Content Include="bin\Debug\Phong.xml" />
     <Content Include="bin\Debug\QuanLyPhongTro.exe" />
@@ -174,7 +167,9 @@
     <Content Include="bin\Debug\System.Configuration.ConfigurationManager.dll" />
     <Content Include="bin\Debug\System.Configuration.ConfigurationManager.xml" />
     <Content Include="bin\Debug\ThietBi.xml" />
-    <Content Include="bin\Debug\XuatHopDong.xslt" />
+    <Content Include="bin\Debug\XuatHopDong.xslt">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="bin\Debug\XuatPhong.xslt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
